# dockeasy

./: CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  proxy.html  proxy.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
dockeasy/: __init__.py  _modidx.py  core.py  proxy.py
nbs/: 00_core.ipynb  01_proxy.ipynb  index.ipynb  nbdev.yml
